# code-review-arena

./: .gitignore  Blog.md  Dockerfile  LICENSE  README.md  baseline.py  baseline_results.json  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  test_day1.py  test_day2.py
corpus/: snippets.py
rag/: bug_patterns.json  build_index.py  index.faiss  index_ids.json  retriever.py
server/: __init__.py  app.py  environment.py  reward.py
tasks/: graders.py
